Defined a record type called account in the bank module with two fields.

--- a/FSVS_Exmaples/FSVS_Exmaples.fsproj
+++ b/FSVS_Exmaples/FSVS_Exmaples.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Bank.fs" />
     <Compile Include="Helpers.fs" />
     <Compile Include="Slides5.fs" />
     <Compile Include="week01.fs" />
