Added pattern matching

--- a/FSVS_Exmaples/FSVS_Exmaples.fsproj
+++ b/FSVS_Exmaples/FSVS_Exmaples.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Week07.fs" />
     <Compile Include="Bank.fs" />
     <Compile Include="Helpers.fs" />
     <Compile Include="Slides5.fs" />
