--- a/FSVS_Exmaples/FSVS_Exmaples.fsproj
+++ b/FSVS_Exmaples/FSVS_Exmaples.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Seatbooking.fs" />
     <Compile Include="Bank2.fs" />
     <Compile Include="Week07K.fs" />
     <Compile Include="Bank.fs" />
